--- a/public/about.html
+++ b/public/about.html
@@ -13,6 +13,6 @@
     <li>Выполнение тестов</li>
     <li>Публикация результатов в соцсети</li>
   </ul>
-  <p>Приложение создается в рамках учебного курса <a href="http://thinknetica.com">онлайн-школы Thinknetica</a>.</p>
+  <p>Приложение создается в рамках учебного курса <a href="http://thinknetica.com" target="_blank" >онлайн-школы Thinknetica</a>.</p>
 </body>
 </html>
