--- a/public/about/author.html
+++ b/public/about/author.html
@@ -5,6 +5,6 @@
   <title>Об авторе</title>
 </head>
 <body>
-  <p>Привет!<br>Меня зовут Ольга Соловьева.<br>Учусь писать интересные приложения в <a href="http://thinknetica.com">Thinknetica</a>.<br>Мой <a href="https://github.com/olsolov">профиль на GitHub</a>.</p>
+  <p>Привет!<br>Меня зовут Ольга Соловьева.<br>Учусь писать интересные приложения в <a href="http://thinknetica.com" target="_blank">Thinknetica</a>.<br>Мой <a href="https://github.com/olsolov" target="_blank">профиль на GitHub</a>.</p>
 </body>
 </html>
